--- a/Samet_Cakmak_PMTP/Site.Master
+++ b/Samet_Cakmak_PMTP/Site.Master
@@ -75,7 +75,7 @@
 
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" runat="server" href="~/">Ana Sayfa</a>
+                <a class="navbar-brand" runat="server" href="~/Default">Ana Sayfa</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Gezintiyi aç/kapat" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
